Deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: express
  name: basic-express-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
      - image: manojjahgirdar/gitops-lifecycle-tekton:v5fdab1de-9bc5-4601-9241-6a4acb3b6d0a
        name: gitops-demo
        ports:
        - containerPort: 3000
