Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-express-app-service
spec:
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30000
  type: NodePort
